<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:text="@string/tic_tac_toe"
        android:textColor="#cc1234"
        android:textSize="32sp"
        android:textStyle="bold">

    </TextView>

    <RelativeLayout
        android:id="@+id/score_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_title"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/player_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/player_1_score"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            >

        </TextView>

        <TextView
            android:id="@+id/player_2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/player_1"
            android:text="@string/player_2_score"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/player_1_score"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player_1"
            android:layout_marginTop="15dp"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/player_2_score"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player_2"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/player_1"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearlayout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_layout"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"
                android:backgroundTint="#0ED116"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text=""
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"
                android:backgroundTint="#0ED116"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"
                android:backgroundTint="#0ED116"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"
                android:backgroundTint="#0ED116"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"
                android:backgroundTint="#0ED116"
                android:textSize="26sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_playagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:labelFor="@id/button_1"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#0800FF"
        android:text="@string/play_again"
        android:textAlignment="center"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_playagain"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:text="@string/reset_game"
        android:textAlignment="center"
        android:textSize="26sp" />


</RelativeLayout>